--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
